--- a/refs.bib
+++ b/refs.bib
@@ -9151,7 +9151,7 @@ month={March},}
 }
 
 @article{bankman2018always,
-  title={An Always-On 3.8$$\backslash$mu $ J/86\% CIFAR-10 mixed-signal binary CNN processor with all memory on chip in 28-nm CMOS},
+  title={An Always-On 3.8$\mu$ J / 86\% CIFAR-10 mixed-signal binary CNN processor with all memory on chip in 28-nm CMOS},
   author={Bankman, Daniel and Yang, Lita and Moons, Bert and Verhelst, Marian and Murmann, Boris},
   journal={IEEE Journal of Solid-State Circuits},
   volume={54},
