--- a/riptide/1_overview.tex
+++ b/riptide/1_overview.tex
@@ -4,7 +4,7 @@
 \figRipTideSystem
 
 \riptide is a compiler and microarchitecture for ultra-low-power, energy-minimal CGRAs
-(\autoref{fig:system}).
+(\autoref{fig:riptide:system}).
 %
 Its architecture is carefully co-designed across compiler and hardware
 to maximize flexibility while minimizing energy.
