--- a/riptide/5_fin.tex
+++ b/riptide/5_fin.tex
@@ -16,7 +16,7 @@ control.
 Implementing each control-flow operator simply requires routing values and manipulating
 upstream and downstream ready/valid signals.
 
-\riptide's router microarchitecture is shown in \autoref{fig:arch:router}.
+\riptide's router microarchitecture is shown in \autoref{fig:riptide:arch:router}.
 % 
 The router shares routing configuration and its data and valid crossbars with
 the baseline NoC.
