--- a/snafu/3_energy.tex
+++ b/snafu/3_energy.tex
@@ -41,7 +41,7 @@ But \snafuframe \emph{spatially} implements vector-dataflow:
 and \emph{each PE performs a single operation} (vs.\ \manic's shared pipeline).
 %
 Note that this design is also a contrast with prior CGRAs, which share PEs among
-multiple operations to increase performance and utilization (\autoref{tab:motivation}).
+multiple operations to increase performance and utilization (\autoref{tab:snafu:motivation}).
 
 As a result, \snafuframe reduces both effects that limit \manic's energy savings.
 %
