--- a/sonic/2_overview.tex
+++ b/sonic/2_overview.tex
@@ -1,21 +1,32 @@
 \section{System overview}
 \label{sonic:overview}
 
-This paper describes the first system for performing DNN inference
-efficiently on intermittently-operating, energy-harvest\-ing
-devices. \autoref{fig:overview} shows the new system components in this work
+This thesis describes the first system for performing DNN inference
+efficiently on intermittently-operating, energy-harvesting
+devices. 
+% 
+\autoref{fig:sonic:overview} shows the new system components in this work
 and how they produce an efficient, intermittence-safe executable starting from
-a high-level DNN model description.  There are three main components to the
+a high-level DNN model description.  
+% 
+There are three main components to the
 system: \genesis, \sonic, and \tails.
+
+\figSONICOverview
 
 \genesis ({\underline g}enerating {\underline e}nergy-aware {\underline n}etworks for {\underline
   e}fficien{\underline s}y on {\underline i}ntermittent {\underline s}ystems) is a tool that automatically
 optimizes a DNN, starting from
-a programmer's high-level description of the network.  \genesis attempts to compress each layer of the network using well-known separation and pruning techniques.
+a programmer's high-level description of the network.  
+% 
+\genesis attempts to compress each layer of the network using well-known separation and pruning techniques.
+% 
 \genesis's goal is
 to \emph{find a network that optimizes \metric}
 while meeting resource
-constraints.  As \autoref{fig:overview} shows, \genesis's input is
+constraints.  
+% 
+As \autoref{fig:sonic:overview} shows, \genesis's input is
 a network description and its output is an optimally compressed network. \autoref{sonic:genesis} describes \genesis.
 
 \sonic ({\underline s}oftware-{\underline o}nly {\underline n}eural {\underline i}ntermittent {\underline
@@ -43,4 +54,4 @@ Starting with a high-level network description, a
 programmer can use \genesis, \sonic, and \tails to build an efficient,
 intermittent DNN-enabled application that meets resource constraints, is robust
 to intermittent operation, and leverages widely available hardware acceleration.
-Our code and datasets can be found at: \textsf{\href{https://github.com/CMUAbstract/SONIC}{https://github.com/CMUAbstract/SONIC}}. 
+% Our code and datasets can be found at: \textsf{\href{https://github.com/CMUAbstract/SONIC}{https://github.com/CMUAbstract/SONIC}}. 
