--- a/floats.tex
+++ b/floats.tex
@@ -26,11 +26,11 @@
 }
 
 \newcommand{\tabMotivate}{
-  \begin{table*}
+  \begin{table*}[htb]
   \centering
   \scriptsize
   \resizebox{\linewidth}{!}{
-  \begin{tabular}{l|p{0.7in}p{0.7in}p{0.7in}|p{0.7in}p{0.7in}p{0.7in}|p{0.7in}|p{0.7in}}
+  \begin{tabular}{l|p{0.7in}p{0.7in}p{0.7in}|p{0.7in}p{0.7in}p{0.7in}|p{0.7in}p{0.7in}}
     \toprule
 	& \multicolumn{3}{c|}{\bf Ultra-low-power CGRAs} & \multicolumn{3}{c|}{\bf High-performance CGRAs} \\[.5ex]
     & \bf ULP-SRP~\cite{srp} & \bf CMA~\cite{cma} & \bf IPA~\cite{ipa} & \bf HyCube~\cite{karunaratne2017hycube} & \bf Revel~\cite{weng2020hybrid} & \bf SGMF~\cite{voitsechov2014single} & \bf \snafu~\cite{snafu} & \bf \riptide \\
@@ -39,15 +39,19 @@
     \bf NoC                 & Neighbors only                                 & Neighbors only     & Neighbors only     & Static, bufferless, multi-hop           & Static \& dynamic NoCs (2$\times$) & Dynamic routing                      & Static, bufferless, multi-hop & Static, bufferless, multi-hop       \\[.5ex]
     \bf PE assignment       & Static                                         & Static             & Static             & Static                                  & Static \emph{or} dynamic           & Dynamic                              & Static  & Static                              \\[.5ex]
     \bf Time-share PEs?     & Yes                                            & Yes                & Yes                & Yes                                     & Yes                                & Yes                                  & No               & No                   \\[.5ex]
-    \bf PE firing           & Static                                         & Static             & Static             & Static                                  & Static \emph{or} dynamic           & Dynamic                              & Dynamic                  & Dynamic           \\[.5ex]
+    \bf Scheduling/PE firing           & Static                                         & Static             & Static             & Static                                  & Static \emph{or} dynamic           & Dynamic                              & Dynamic                  & Dynamic           \\[.5ex]
     \bf Heterogeneous PEs?  & No                                             & No                 & No                 & No                                      & Yes                                & Yes                                  & Yes               & Yes                  \\[.5ex]
-    % \bf Buffering (approx.) & ---                                            & ---                & 188\,B / PE        & 272\,B / PE                             & $\approx$1\,KB / PE                & $\gg$1\,KB / PE                      & 40\,B / PE                          \\[.5ex]
+    \bf Program support & VLIW/Simple loops$^1$            & VLIW/Simple loops$^1$      &  Simple loops$^1$                             & Simple loops$^1$                & Arbitrary (CUDA-like)                      & Loops that fit patterns & Vectorizeable loops & Arbitrary                    \\[.5ex]
     \midrule
     \bf Power               & 22\,mW                                         & 11\,mW             & 3--5\,mW           & 15--70\,mW                              & 160\,mW                            & 20\,W                                & $<$1\,mW               & $<$1\,mW           \\[.5ex]
-    \bf Peak MOPS/mW (approx.)   & 30--100                                        & 100--200           & 140                & 60--90                                  & 60                                 & 60                                   & 305 (fabric)      & 438 (fabric)                  \\[.5ex]
+    \bf MOPS/mW (approx.)   & 30--100                                        & 100--200           & 140                & 60--90                                  & 60                                 & 60                                   & 305 (fabric)      & 438 (fabric)                  \\[.5ex]
     \bottomrule
   \end{tabular}
+
   }
+	
+	$^1$ Simple loops are singly-nested and have few loop-carried dependence.
+
   \caption{Architectural comparison of prior work to \snafu and \riptide.}
   \label{tab:motivation}
 \end{table*}
