--- a/sonic/1_motivation.tex
+++ b/sonic/1_motivation.tex
@@ -122,7 +122,7 @@ system does not perform well.
 Suppose sensing costs $E_\text{sense}$ energy,
 communicating one sensor reading costs $E_\text{comm}$ energy,
 and interesting events occur at a base rate of $p$
-(see \autoref{tab:motivation:model}).
+(see \autoref{tab:sonic:motivation:model}).
 %
 Then the baseline system spends $E_\text{sense} + E_\text{comm}$ energy per
 event, only $p$ of which are worth communicating, and its \metric is:
@@ -188,12 +188,12 @@ $E_\text{comm} \approx 23,\!000$mJ over OpenChirp~\cite{dongare2017openchirp}.
 Finally, we consider two systems with local inference:
 a na\"ive baseline implemented using prior task-based intermittence support (specifically Tile-8 in \autoref{sonic:sonic:runtime})
 and \sonictails, our proposed technique.
-Their inference energies are gathered from our prototype (\autoref{sonic:method}),
+Their inference energies are gathered from our prototype (\autoref{sonic:methodology}),
 taking $E_\text{infer,na\"ive} \approx 198$mJ and $E_\text{infer,\tails} \approx 26$mJ, respectively.
 
 \figSONICMotivateImages
 
-\autoref{fig:motivation:images} shows each system's \metric after
+\autoref{fig:sonic:motivation:images} shows each system's \metric after
 plugging these numbers into the model.
 %
 For simplicity, the figure assumes that true positive and negative
@@ -232,7 +232,7 @@ In our wildlife monitoring example, $E_\text{comm}$ decreases by $98\times$.
 
 \figSONICMotivateResults
 
-\autoref{fig:motivation:results} shows end-to-end performance when
+\autoref{fig:sonic:motivation:results} shows end-to-end performance when
 only sending inference results.
 %
 Local inference allows dramatic reductions in communication energy:
@@ -244,5 +244,4 @@ energy cost,
 and \emph{\sonictails outperform na\"ive local inference by $4.6\times$.}
 Finally, the gap between Ideal and \sonictails is $2.2\times$.
 %
-This gap is difficult to close further on current hardware;
-we discuss ways to address it in \autoref{sonic:panic}.
+This gap is difficult to close further on current hardware, but will be addressed in later chapters (\autoref{chapter:manic}, \autoref{chapter:snafu}, and \autoref{chapter:riptide}).
