--- a/sonic/3_genesis.tex
+++ b/sonic/3_genesis.tex
@@ -1,4 +1,3 @@
-\figSONICGenesisNNs
 \section{Optimal DNN compression with \genesis}
 \label{sonic:genesis}
 
@@ -11,16 +10,16 @@ imposes a hard constraint on networks.
 We have developed a tool called \genesis
 that automatically
 explores different configurations of a baseline neural network,
-applying separation and pruning techniques (\autoref{sonic:background}) to reduce the network's resource requirements.
+applying separation and pruning techniques (\autoref{chapter:background:inference:algorithm}) to reduce the network's resource requirements.
 %
 \genesis improves upon these known techniques by
 optimally balancing inference energy and true positive/negative rates to maximize \metric,
 building on the the model in \autoref{sonic:motivation}.
 
-\subsection{Neural networks considered in this paper}
+\tabSONICleGenesisNNS
 
-%
-This paper considers three networks, summarized in \autoref{tab:nns}.
+\subsection{Neural networks under consideration}
+We consider three networks, summarized in \autoref{tab:sonic:genesis:nns}.
 %
 To represent image-based applications (e.g., wildlife monitoring and
 disaster recovery), we consider MNIST~\cite{lecun1998mnist}. We consider
@@ -44,6 +43,7 @@ the DNN models~\cite{lecun1998gradient}: measured by \metric, SVM under-performe
 by 2$\times$ on MNIST and by 8$\times$ on HAR, and we could not find an SVM model 
 for OkG that performed anywhere close to the DNN.
 
+\figSONICGenesisNNs
 \subsection{Fitting networks on energy-harvesting systems}
 
 \genesis evaluates many compressed configurations of a 
@@ -77,8 +77,8 @@ accuracy.
 \genesis relies on the Ray Tune black box optimizer with the Median
 Stopping Rule to explore the configuration space~\cite{golovin2017google, moritz2017ray}.
 %
-\autoref{fig:genesis:train} shows the results for the networks in
-\autoref{tab:genesis:nns}.
+\autoref{fig:sonic:genesis:train} shows the results for the networks in
+\autoref{tab:sonic:genesis:nns}.
 %
 Each marker on the figure represents one compressed configuration,
 shown by inference accuracy on the $y$-axis and inference energy on
@@ -91,13 +91,11 @@ circles and infeasible configurations are grey $\times$s.
 Note that the original configuration (large $\times$) is infeasible for all three networks,
 meaning that they cannot be na\"ively ported to the device because their parameters would not fit in memory.
 
-\autoref{fig:genesis:train} also shows the Pareto frontier for each
+\autoref{fig:sonic:genesis:train} also shows the Pareto frontier for each
 compression technique.
 %
 Generally, pruning is more effective than separation, but the
 techniques are complementary.
-
-\tabSONICleGenesisNNS
 
 \subsection{Choosing a neural network configuration}
 
@@ -115,8 +113,8 @@ The user can specify which class in the training set is
 ``interesting,'' letting \genesis compute true positive $t_p$ and negative $t_n$ rates for the
 specific application.
 
-\autoref{fig:genesis:perf} shows the results by mapping each point in
-\autoref{fig:genesis:train} through the model.
+\autoref{fig:sonic:genesis:perf} shows the results by mapping each point in
+\autoref{fig:sonic:genesis:train} through the model.
 %
 For these results, we use $E_\text{sense}$ from
 \autoref{sonic:motivation}, per-operation energy from our \sonictails
@@ -126,10 +124,10 @@ from input size assuming OpenChirp networking~\cite{dongare2017openchirp}.
 \genesis chooses the feasible configuration that maximizes
 estimated end-to-end performance (i.e., \metric).
 %
-\autoref{fig:genesis:perf} shows that this choice is non-trivial.
+\autoref{fig:sonic:genesis:perf} shows that this choice is non-trivial.
 %
 True positive, true negative, and inference energy affect end-to-end application
 performance in ways that are difficult to predict. Simply choosing the most accurate
-configuration, as the twisty blue curve suggests in \autoref{fig:genesis:perf}, 
+configuration, as the twisty blue curve suggests in \autoref{fig:sonic:genesis:perf}, 
 is insufficient since it may waste too much energy or underperform other 
 configurations on true positive or true negative rates.
